--- a/sicongliu.html
+++ b/sicongliu.html
@@ -41,9 +41,8 @@
 					</div>
 					<h2>Dr. Sicong Liu (劉思聰)</h2>
 					<p>PhD, Tsinghua University</p>
-					<p>Assistant Professor</p>
-					<p>School of Information Science and Technology, Xiamen University</p>
-					<p>Address: Xiamen University, Xiamen 361005, China P.R.</p>
+					<p>Assistant Professor, School of Informatics, Xiamen University</p>
+					<p>Address: Haiyun Campus, Xiamen University, Xiamen 361005, China P.R.</p>
 					<p>E-mail: liusc at xmu dot edu dot cn/ liusc1028 at gmail dot com</p>
 									<br><br>
 				</div>
@@ -60,10 +59,10 @@
 			<div class="summary">Lorem ipsum dolor sit amet nullam dignissim</div>
 -->
 <h3></h3>
-<p><b>Sicong Liu</b> received his B.S.E. in electronic engineering from Tsinghua University, Beijing, China in 2012, and the PhD degree,  supervised by <a target="blank" href="http://dtv.ee.tsinghua.edu.cn/indexe.htm">Prof. Jian Song</a> (IEEE Fellow, ITU 6A Group Deputy Leader), in electronic engineering in Tsinghua University in 2017 with the highest honor. From 2010 to 2011, he was a visiting scholar in Dept. Electronic and Communications Engineering, City University of Hong Kong. He served as a senior research engineer in Research Dept. Network Technologies, Huawei Technologies Co. Ltd, from 2017 to 2018. Currently, he is an assistant professor in School of Information Science and Technology, Xiamen University</p>
+<p><b>Sicong Liu</b> received his B.S.E. in electronic engineering from Tsinghua University, Beijing, China in 2012, and the PhD degree,  supervised by Prof. Jian Song (IEEE Fellow, ITU 6A Group Deputy Leader), in electronic engineering in Tsinghua University in 2017 with the highest honor. From 2010 to 2011, he was a visiting scholar in Dept. Electronic and Communications Engineering, City University of Hong Kong. He served as a senior research engineer in Research Dept. Network Technologies, Huawei Technologies Co. Ltd, from 2017 to 2018. Currently, he is an assistant professor in School of Information Science and Technology, Xiamen University.</p>
 			   
-<p>Sicong Liu has published over 36 journal and conference research papers. He owns 7 Chinese invention patents. He is one of the core members that draft the Broadband Power Line Communications Standard in China. He has won the National Graduate Fellowship Award twice in 2014 and 2016, the Outstanding Doctoral Dissertation Award of Tsinghua University, the Outstanding PhD Graduate Award of Tsinghua University, and the Outstanding Graduate Award of Beijing City. He is a reviewer of IEEE Transactions on Signal Processing, IEEE Transactions on Communications, IEEE Transactions on Broadcasting, IEEE Transactions on Vehicular Technology and IEEE Transactions on Power Delivery. He is on the Editorial Board of the Future Internet Journal Special Issue on Massive MIMO Communication and Networking Systems. He served as a Technical Program Committee Member of the International Telecommunication Networks and Applications Conference (ITNAC) and Data Intensive Computing and Communications (DICC) 2017. He is a member of IEEE.</p>
-<p>His research interests lie in sparse signal processing, interference mitigation, cross-layer resource allocation and optimization, 5G emerging technologies, and their applications in the field of wireless communications, broadband multimedia transmission, smart grid communications, and power line and visible light communications. </p>
+<p>Sicong Liu has published over 40 journal and conference research papers. He owns 8 Chinese invention patents. He is one of the core members that draft the Broadband Power Line Communications Standard in China. He has won the National Graduate Fellowship Award twice in 2014 and 2016, the Outstanding Doctoral Dissertation Award of Tsinghua University, the Outstanding PhD Graduate Award of Tsinghua University, and the Outstanding Graduate Award of Beijing City. He is a reviewer of IEEE Transactions on Signal Processing, IEEE Transactions on Communications, IEEE Transactions on Smart Grid, IEEE Transactions on Vehicular Technology, IEEE Transactions on Cybernetics, and IEEE Transactions on Wireless Communications. He is on the Editorial Board of the Future Internet Journal SI on Massive MIMO. He served as a the Technical Program Committee member/publication chair in many international academic conferences, including IEEE ICC, IEEE Globecom, IEEE SmartGridComm, ITNAC, DICC. He is a member of IEEE.</p>
+<p>His research interests mainly lie in sparse signal processing, interference suppression, wireless communications, massive MIMO, power line and visible light communications, machine learning, and emerging 5G technologies.</p>
 
 			<h3>Education and Research Experiences</h3>
 			<p><b>Mar. 2018 - Present</b> &nbsp;&nbsp; Assistant Professor, School of Information Science and Technology, Xiamen University</p>
@@ -75,14 +74,21 @@
 
 <h3>Selected Publications</h3>
 <p><strong>Journals</strong></p>
-<p>&bull; <b>Sicong Liu</b>, Fang Yang, Jian Song, Zhu Han, "<a target="blank" href="http://ieeexplore.ieee.org/document/7968406/">Block Sparse Bayesian Learning Based NB-IoT Interference Elimination in LTE-Advanced Systems</a>," accepted by <i>IEEE Transactions on Communications</i>, Jun. 2017.</p>
+<p>&bull; <b>S. Liu</b>#, L. Xiao, Z. Han and Y. Tang, "<a target="blank" href="https://ieeexplore.ieee.org/document/8695828">Eliminating NB-IoT Interference to LTE System: a Sparse Machine Learning Based Approach</a>," <i>IEEE Internet of Things Journal</i>, vol. 6, no. 4, pp. 6919-6932, Aug. 2019.</p>
 
-<p>&bull; <b>Sicong Liu</b>, Fang Yang,  Xianbin Wang, Jian Song, Zhu Han, "<a target="blank" href="http://ieeexplore.ieee.org/document/7833213/">Structured-Compressed-Sensing-Based Impulsive Noise Cancellation for MIMO Systems</a>," accepted by <i>IEEE Transactions on Vehicular Technology</i>, Jan. 2017.</p>
-<p>&bull; <b>Sicong Liu</b>, Fang Yang, Wenbo Ding, Xianbin Wang, and Jian Song, "<a target="blank" href="http://ieeexplore.ieee.org/document/7373681/">Two Dimensional Structured Compressed Sensing Based NBI Cancellation Exploiting Spatial and Temporal Correlations in MIMO Systems</a>," <i>IEEE Transactions on Vehicular Technology</i>, vol. 65, no. 11, pp. 9020-9028, Nov. 2016.</p>
-<p>&bull; <b>Sicong Liu</b>, Fang Yang, Wenbo Ding, and Jian Song, "<a target="blank" href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&amp;arnumber=7163620">Double Kill: Compressive Sensing Based Narrowband Interference and Impulsive Noise Mitigation for Vehicular Communications</a>," <i>IEEE Transactions on Vehicular Technology</i>, vol. 65, no. 7, pp. 5099-5109, July 2016.</p>
-<p>&bull; <b>Sicong Liu</b>, Fang Yang, Jian Song, "<a target="blank" href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=6998816&amp;newsearch=true&amp;queryText=Narrowband%20Interference%20Cancellation%20Based%20on%20Priori%20Aided%20Compressive%20Sensing%20for%20DTMB%20Systems">Narrowband Interference Cancellation Based on Priori Aided Compressive Sensing for DTMB Systems</a>,” <i>IEEE Transactions on Broadcasting</i>, vol.61, no.1, pp.66-74, March 2015.</p>
+<p>&bull; L. Xiao, G. Sheng, <b>S. Liu</b>#, H. Dai, M. Peng and J. Song, "<a target="blank" href="https://ieeexplore.ieee.org/document/8768346">Deep Reinforcement Learning Enabled Secure Visible Light Communication against Eavesdropping</a>," <i>IEEE Transactions on Communications</i>, doi: 10.1109/TCOMM.2019.2930247.</p>
+
+
+<p>&bull; <b>S. Liu</b>#, L. Xiao, L. Huang and X. Wang, "<a target="blank" href="https://ieeexplore.ieee.org/document/8606256">Impulsive Noise Recovery and Elimination: A Sparse Machine Learning Based Approach</a>," <i>IEEE Transactions on Vehicular Technology</i>, vol. 68, no. 3, pp. 2306-2315, March 2019.</p>
+
+<p>&bull; <b>Sicong Liu</b>, Fang Yang#, Jian Song, Zhu Han, "<a target="blank" href="http://ieeexplore.ieee.org/document/7968406/">Block Sparse Bayesian Learning Based NB-IoT Interference Elimination in LTE-Advanced Systems</a>," <i>IEEE Transactions on Communications</i>, 2017, 65(10): 4559 - 4571.</p>
+
+<p>&bull; <b>Sicong Liu</b>, Fang Yang#,  Xianbin Wang, Jian Song, Zhu Han, "<a target="blank" href="http://ieeexplore.ieee.org/document/7833213/">Structured-Compressed-Sensing-Based Impulsive Noise Cancellation for MIMO Systems</a>," <i>IEEE Transactions on Vehicular Technology</i>, 2017, 66(8): 6921 - 6931.</p>
+<p>&bull; <b>Sicong Liu</b>, Fang Yang#, Wenbo Ding, Xianbin Wang, and Jian Song, "<a target="blank" href="http://ieeexplore.ieee.org/document/7373681/">Two Dimensional Structured Compressed Sensing Based NBI Cancellation Exploiting Spatial and Temporal Correlations in MIMO Systems</a>," <i>IEEE Transactions on Vehicular Technology</i>, vol. 65, no. 11, pp. 9020-9028, Nov. 2016.</p>
+<p>&bull; <b>Sicong Liu</b>, Fang Yang#, Wenbo Ding, and Jian Song, "<a target="blank" href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&amp;arnumber=7163620">Double Kill: Compressive Sensing Based Narrowband Interference and Impulsive Noise Mitigation for Vehicular Communications</a>," <i>IEEE Transactions on Vehicular Technology</i>, vol. 65, no. 7, pp. 5099-5109, July 2016.</p>
+<p>&bull; <b>Sicong Liu</b>#, Fang Yang, Jian Song, "<a target="blank" href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=6998816&amp;newsearch=true&amp;queryText=Narrowband%20Interference%20Cancellation%20Based%20on%20Priori%20Aided%20Compressive%20Sensing%20for%20DTMB%20Systems">Narrowband Interference Cancellation Based on Priori Aided Compressive Sensing for DTMB Systems</a>,” <i>IEEE Transactions on Broadcasting</i>, vol.61, no.1, pp.66-74, March 2015.</p>
 		<p>&bull; <b>Sicong Liu</b>, Fang Yang, Jian Song, "<a target="blank" href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=6937195&amp;newsearch=true&amp;queryText=An%20Optimal%20Interleaving%20Scheme%20with%20Maximum%20Time-Frequency%20Diversity%20for%20PLC%20Systems">An Optimal Interleaving Scheme with Maximum Time-Frequency Diversity for PLC Systems</a>,” <i>IEEE Transactions on Power Delivery</i>, vol. 31, no. 3, pp. 1007-1014, June 2016.</p>
-		<p>&bull; <b>Sicong Liu</b>, Fang Yang,  Wenbo Ding, Jian Song, and Andrea M. Tonello, "<a target="blank" href="http://ieeexplore.ieee.org/document/7931965/">Structured Compressed Sensing Based Narrowband Interference Elimination for In-Home Power Line Communications</a>," accepted by <i>IEEE Transactions on Consumer Electronics</i>, vol. 63, no. 1, pp. 10-18, Feb. 2017.</p>
+		<p>&bull; <b>Sicong Liu</b>, Fang Yang,  Wenbo Ding, Jian Song, and Andrea M. Tonello, "<a target="blank" href="http://ieeexplore.ieee.org/document/7931965/">Structured Compressed Sensing Based Narrowband Interference Elimination for In-Home Power Line Communications</a>," <i>IEEE Transactions on Consumer Electronics</i>, vol. 63, no. 1, pp. 10-18, Feb. 2017.</p>
 		<p>&bull; <b>Sicong Liu</b>, Fang Yang, Chao Zhang, Jian Song, "<a target="blank" href="http://search.ieice.org/bin/summary.php?id=e98-a_3_870&amp;year=2015">Narrowband interference mitigation based on compressive sensing for OFDM systems</a>”, <i>IEICE Transactions on Fundamentals</i>, vol. E98-A, no. 3, pp. 870–873, March 2015.</p>
 
 		<p>&bull; Tengjiao Wang, <b>Sicong Liu</b>, Fang Yang, Jintao Wang, Jian Song, “<a target="blank" href="http://ieeexplore.ieee.org/document/8057263/">Generalized Spatial Modulation Based Multi-User and Signal Detection Scheme for Terrestrial Return Channel with NOMA</a>”, accepted by <i>IEEE Transactions on Broadcasting</i>, Aug. 2017.
@@ -100,6 +106,8 @@
 
 <br>
 <p><strong>Conferences</strong></p>
+<p>&bull; H. Zhang, M. Min, L. Xiao, <b>S. Liu</b>#, P. Cheng and M. Peng, "<a target="blank" href="https://ieeexplore.ieee.org/document/8648136">Reinforcement Learning-Based Interference Control for Ultra-Dense Small Cells</a>,” <i>2018 IEEE Global Communications Conference (GLOBECOM)</i>, Abu Dhabi, United Arab Emirates, 2018, pp. 1-6.</p>
+<p>&bull; Z. Xiao, B. Gao, <b>S. Liu</b># and L. Xiao, "<a target="blank" href="https://ieeexplore.ieee.org/document/8647173">Learning Based Power Control for mmWave Massive MIMO against Jamming</a>,” <i>2018 IEEE Global Communications Conference (GLOBECOM)</i>, Abu Dhabi, United Arab Emirates, 2018, pp. 1-6.</p>
 <p>&bull; <b>Sicong Liu</b>, Fang Yang, Wenbo Ding, Jian Song, Zhu Han, "Impulsive Noise Cancellation for MIMO-OFDM PLC Systems: a Structured Compressed Sensing Perspective", to appear in <i>Proc. IEEE Global Communications Conference (Globecom)</i>, Dec. 2016.</p>
 <p>&bull; <b>Sicong Liu</b>, Fang Yang, Wenbo Ding, Jian Song, "NBI Cancellation for Smart Grid Communications: A Block Sparse Bayesian Learning Perspective", in <i>Proc. 2016 IEEE International Conference on Communications (ICC)</i>, Kuala Lumpur, May 2016, pp. 1-6.</p>
 <p>&bull; <b>Sicong Liu</b>, Fang Yang, Wenbo Ding, Jian Song, "<a target="blank" href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=7247536&amp;newsearch=true&amp;queryText=Structured%20compressive%20sensing%20based%20narrowband%20interference%20mitigation%20for%20vehicular%20communications">Structured compressive sensing based narrowband interference mitigation for vehicular communications</a>,” <i>Proc. IEEE International Conference on Communications (ICC’15)</i>, pp. 2375-2380, Jun. 2015.</p>
@@ -159,7 +167,7 @@
 <br>
 <h3></h3>
 	<div class="footer">
-		Last updatd Mar. 2018 | copyright &copy; <b>Sicong Liu</b>.
+		Last updatd Aug. 2019 | copyright &copy; <b>Sicong Liu</b>.
 	</div>
 </div>
 
