--- a/sicongliu.html
+++ b/sicongliu.html
@@ -74,7 +74,7 @@
 
 <h3>Selected Publications</h3>
 <p><strong>Journals</strong></p>
-<p>&bull; <b>S. Liu</b>#, L. Xiao, Z. Han and Y. Tang, "<a target="blank" href="https://ieeexplore.ieee.org/document/8695828">Eliminating NB-IoT Interference to LTE System: a Sparse Machine Learning Based Approach</a>," <i>IEEE Internet of Things Journal</i>, vol. 6, no. 4, pp. 6919-6932, Aug. 2019.</p>
+	<p>&bull; <b>S. Liu</b>#, L. Xiao, Z. Han and Y. Tang, "Eliminating NB-IoT Interference to LTE System: a Sparse Machine Learning Based Approach," <i>IEEE Internet of Things Journal</i>, vol. 6, no. 4, pp. 6919-6932, Aug. 2019.[<a target="blank" href="https://ieeexplore.ieee.org/document/8695828">Abstract</a>][<a href="papers/JIoT.pdf">PDF</a>][<a href="papers/JIoT.bib">bibtex</a>]</p>
 
 <p>&bull; L. Xiao, G. Sheng, <b>S. Liu</b>#, H. Dai, M. Peng and J. Song, "<a target="blank" href="https://ieeexplore.ieee.org/document/8768346">Deep Reinforcement Learning Enabled Secure Visible Light Communication against Eavesdropping</a>," <i>IEEE Transactions on Communications</i>, doi: 10.1109/TCOMM.2019.2930247.</p>
 
