--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="header">
         <ul id="pages">
             <li>
-                <a href="/">Biography</a>
+                <a href="/">biography</a>
             </li>
             <li>
                 <a href="/#/tags">tags</a>
