--- a/sicongliu.html
+++ b/sicongliu.html
@@ -74,9 +74,9 @@
 
 <h3>Selected Publications</h3>
 <p><strong>Journals</strong></p>
-	<p>&bull; <b>S. Liu</b>#, L. Xiao, Z. Han and Y. Tang, "Eliminating NB-IoT Interference to LTE System: a Sparse Machine Learning Based Approach," <i>IEEE Internet of Things Journal</i>, vol. 6, no. 4, pp. 6919-6932, Aug. 2019.</p>
+	<p>&bull; <b>S. Liu</b>#, L. Xiao, Z. Han and Y. Tang, "Eliminating NB-IoT Interference to LTE System: a Sparse Machine Learning Based Approach," <i>IEEE Internet of Things Journal</i>, vol. 6, no. 4, pp. 6919-6932, Aug. 2019.[<a target="blank" href="https://ieeexplore.ieee.org/document/8695828">Abstract</a>]</p>
 
-<p>&bull; L. Xiao, G. Sheng, <b>S. Liu</b>#, H. Dai, M. Peng and J. Song, "Deep Reinforcement Learning Enabled Secure Visible Light Communication against Eavesdropping," <i>IEEE Transactions on Communications</i>, vol. 67, no. 10, pp. 6994-7005, Oct. 2019.</p>
+<p>&bull; L. Xiao, G. Sheng, <b>S. Liu</b>#, H. Dai, M. Peng and J. Song, "Deep Reinforcement Learning Enabled Secure Visible Light Communication against Eavesdropping," <i>IEEE Transactions on Communications</i>, vol. 67, no. 10, pp. 6994-7005, Oct. 2019.[<a target="blank" href="https://ieeexplore.ieee.org/document/8768346">Abstract</a>]</p>
 
 
 <p>&bull; <b>S. Liu</b>#, L. Xiao, L. Huang and X. Wang, "<a target="blank" href="https://ieeexplore.ieee.org/document/8606256">Impulsive Noise Recovery and Elimination: A Sparse Machine Learning Based Approach</a>," <i>IEEE Transactions on Vehicular Technology</i>, vol. 68, no. 3, pp. 2306-2315, March 2019.</p>
