--- a/sicongliu.html
+++ b/sicongliu.html
@@ -74,7 +74,7 @@
 
 <h3>Selected Publications</h3>
 <p><strong>Journals</strong></p>
-	<p>&bull; <b>S. Liu</b>#, L. Xiao, Z. Han and Y. Tang, "Eliminating NB-IoT Interference to LTE System: a Sparse Machine Learning Based Approach," <i>IEEE Internet of Things Journal</i>, vol. 6, no. 4, pp. 6919-6932, Aug. 2019.[<a target="blank" href="https://ieeexplore.ieee.org/document/8695828">Abstract</a>][<a target="blank" href="papers/JIoT.pdf">PDF</a>][<a target="blank" href="papers/JIoT.bib">bibtex</a>]</p>
+	<p>&bull; <b>S. Liu</b>#, L. Xiao, Z. Han and Y. Tang, "Eliminating NB-IoT Interference to LTE System: a Sparse Machine Learning Based Approach," <i>IEEE Internet of Things Journal</i>, vol. 6, no. 4, pp. 6919-6932, Aug. 2019.[<a target="blank" href="https://ieeexplore.ieee.org/document/8695828">Abstract</a>][<a target="blank" href="papers/JIoT.pdf">PDF</a>][<a target="blank" href="papers/JIoT.txt">bibtex</a>]</p>
 
 <p>&bull; L. Xiao, G. Sheng, <b>S. Liu</b>#, H. Dai, M. Peng and J. Song, "Deep Reinforcement Learning Enabled Secure Visible Light Communication against Eavesdropping," <i>IEEE Transactions on Communications</i>, vol. 67, no. 10, pp. 6994-7005, Oct. 2019.[<a target="blank" href="https://ieeexplore.ieee.org/document/8768346">Abstract</a>][<a target="blank"  href="papers/TCOM19.pdf">PDF</a>][<a target="blank"  href="papers/TCOM19.bib">bibtex</a>]</p>
 
