--- a/sicongliu.html
+++ b/sicongliu.html
@@ -73,20 +73,24 @@
 
 
 <h3>Selected Publications</h3>
+
 <p><strong>Journals</strong></p>
-	<p>&bull; <b>S. Liu</b>#, L. Xiao, Z. Han and Y. Tang, "Eliminating NB-IoT Interference to LTE System: a Sparse Machine Learning Based Approach," <i>IEEE Internet of Things Journal</i>, vol. 6, no. 4, pp. 6919-6932, Aug. 2019.[<a target="blank" href="https://ieeexplore.ieee.org/document/8695828">Abstract</a>][<a target="blank" href="papers/JIoT.pdf">PDF</a>][<a target="blank" href="papers/JIoT.bib">bibtex</a>]</p>
 
-<p>&bull; L. Xiao, G. Sheng, <b>S. Liu</b>#, H. Dai, M. Peng and J. Song, "Deep Reinforcement Learning Enabled Secure Visible Light Communication against Eavesdropping," <i>IEEE Transactions on Communications</i>, vol. 67, no. 10, pp. 6994-7005, Oct. 2019.[<a target="blank" href="https://ieeexplore.ieee.org/document/8768346">Abstract</a>][<a target="blank"  href="papers/TCOM19.pdf">PDF</a>][<a target="blank"  href="papers/TCOM19.bib">bibtex</a>]</p>
+<p>&bull; L. Xiao, H. Zhang, Y. Xiao, X. Wan, <b>S. Liu</b>, L.-C. Wang, and H. V. Poor, "Reinforcement Learning-Based Downlink Interference Control for Ultra-Dense Small Cells," <i>IEEE Transactions on Wireless Communications</i>, vol. 19, no. 1, pp. 423-434, Jan. 2020.[<a target="blank" href="https://ieeexplore.ieee.org/document/8868117">Abstract</a>][<a target="blank"  href="papers/TWC19.pdf">PDF</a>][<a target="blank"  href="papers/TWC19.bib">bibtex</a>]</p>
+
+	<p>&bull; <b>S. Liu</b>*, L. Xiao, Z. Han and Y. Tang, "Eliminating NB-IoT Interference to LTE System: a Sparse Machine Learning Based Approach," <i>IEEE Internet of Things Journal</i>, vol. 6, no. 4, pp. 6919-6932, Aug. 2019.[<a target="blank" href="https://ieeexplore.ieee.org/document/8695828">Abstract</a>][<a target="blank" href="papers/JIoT.pdf">PDF</a>][<a target="blank" href="papers/JIoT.bib">bibtex</a>]</p>
+
+<p>&bull; L. Xiao, G. Sheng, <b>S. Liu</b>*, H. Dai, M. Peng and J. Song, "Deep Reinforcement Learning Enabled Secure Visible Light Communication against Eavesdropping," <i>IEEE Transactions on Communications</i>, vol. 67, no. 10, pp. 6994-7005, Oct. 2019.[<a target="blank" href="https://ieeexplore.ieee.org/document/8768346">Abstract</a>][<a target="blank"  href="papers/TCOM19.pdf">PDF</a>][<a target="blank"  href="papers/TCOM19.bib">bibtex</a>]</p>
 
 
-<p>&bull; <b>S. Liu</b>#, L. Xiao, L. Huang and X. Wang, "Impulsive Noise Recovery and Elimination: A Sparse Machine Learning Based Approach," <i>IEEE Transactions on Vehicular Technology</i>, vol. 68, no. 3, pp. 2306-2315, March 2019.[<a target="blank" href="https://ieeexplore.ieee.org/document/8606256">Abstract</a>][<a target="blank"  href="papers/TVT19.pdf">PDF</a>][<a target="blank"  href="papers/TVT19.bib">bibtex</a>]</p>
+<p>&bull; <b>S. Liu</b>*, L. Xiao, L. Huang and X. Wang, "Impulsive Noise Recovery and Elimination: A Sparse Machine Learning Based Approach," <i>IEEE Transactions on Vehicular Technology</i>, vol. 68, no. 3, pp. 2306-2315, March 2019.[<a target="blank" href="https://ieeexplore.ieee.org/document/8606256">Abstract</a>][<a target="blank"  href="papers/TVT19.pdf">PDF</a>][<a target="blank"  href="papers/TVT19.bib">bibtex</a>]</p>
 
-<p>&bull; <b>Sicong Liu</b>, Fang Yang#, Jian Song, Zhu Han, "<a target="blank" href="http://ieeexplore.ieee.org/document/7968406/">Block Sparse Bayesian Learning Based NB-IoT Interference Elimination in LTE-Advanced Systems</a>," <i>IEEE Transactions on Communications</i>, 2017, 65(10): 4559 - 4571.</p>
+<p>&bull; <b>Sicong Liu</b>, Fang Yang*, Jian Song, Zhu Han, "<a target="blank" href="http://ieeexplore.ieee.org/document/7968406/">Block Sparse Bayesian Learning Based NB-IoT Interference Elimination in LTE-Advanced Systems</a>," <i>IEEE Transactions on Communications</i>, 2017, 65(10): 4559 - 4571.</p>
 
-<p>&bull; <b>Sicong Liu</b>, Fang Yang#,  Xianbin Wang, Jian Song, Zhu Han, "<a target="blank" href="http://ieeexplore.ieee.org/document/7833213/">Structured-Compressed-Sensing-Based Impulsive Noise Cancellation for MIMO Systems</a>," <i>IEEE Transactions on Vehicular Technology</i>, 2017, 66(8): 6921 - 6931.</p>
-<p>&bull; <b>Sicong Liu</b>, Fang Yang#, Wenbo Ding, Xianbin Wang, and Jian Song, "<a target="blank" href="http://ieeexplore.ieee.org/document/7373681/">Two Dimensional Structured Compressed Sensing Based NBI Cancellation Exploiting Spatial and Temporal Correlations in MIMO Systems</a>," <i>IEEE Transactions on Vehicular Technology</i>, vol. 65, no. 11, pp. 9020-9028, Nov. 2016.</p>
-<p>&bull; <b>Sicong Liu</b>, Fang Yang#, Wenbo Ding, and Jian Song, "<a target="blank" href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&amp;arnumber=7163620">Double Kill: Compressive Sensing Based Narrowband Interference and Impulsive Noise Mitigation for Vehicular Communications</a>," <i>IEEE Transactions on Vehicular Technology</i>, vol. 65, no. 7, pp. 5099-5109, July 2016.</p>
-<p>&bull; <b>Sicong Liu</b>#, Fang Yang, Jian Song, "<a target="blank" href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=6998816&amp;newsearch=true&amp;queryText=Narrowband%20Interference%20Cancellation%20Based%20on%20Priori%20Aided%20Compressive%20Sensing%20for%20DTMB%20Systems">Narrowband Interference Cancellation Based on Priori Aided Compressive Sensing for DTMB Systems</a>,” <i>IEEE Transactions on Broadcasting</i>, vol.61, no.1, pp.66-74, March 2015.</p>
+<p>&bull; <b>Sicong Liu</b>, Fang Yang*,  Xianbin Wang, Jian Song, Zhu Han, "<a target="blank" href="http://ieeexplore.ieee.org/document/7833213/">Structured-Compressed-Sensing-Based Impulsive Noise Cancellation for MIMO Systems</a>," <i>IEEE Transactions on Vehicular Technology</i>, 2017, 66(8): 6921 - 6931.</p>
+<p>&bull; <b>Sicong Liu</b>, Fang Yang*, Wenbo Ding, Xianbin Wang, and Jian Song, "<a target="blank" href="http://ieeexplore.ieee.org/document/7373681/">Two Dimensional Structured Compressed Sensing Based NBI Cancellation Exploiting Spatial and Temporal Correlations in MIMO Systems</a>," <i>IEEE Transactions on Vehicular Technology</i>, vol. 65, no. 11, pp. 9020-9028, Nov. 2016.</p>
+<p>&bull; <b>Sicong Liu</b>, Fang Yang*, Wenbo Ding, and Jian Song, "<a target="blank" href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&amp;arnumber=7163620">Double Kill: Compressive Sensing Based Narrowband Interference and Impulsive Noise Mitigation for Vehicular Communications</a>," <i>IEEE Transactions on Vehicular Technology</i>, vol. 65, no. 7, pp. 5099-5109, July 2016.</p>
+<p>&bull; <b>Sicong Liu</b>*, Fang Yang, Jian Song, "<a target="blank" href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=6998816&amp;newsearch=true&amp;queryText=Narrowband%20Interference%20Cancellation%20Based%20on%20Priori%20Aided%20Compressive%20Sensing%20for%20DTMB%20Systems">Narrowband Interference Cancellation Based on Priori Aided Compressive Sensing for DTMB Systems</a>,” <i>IEEE Transactions on Broadcasting</i>, vol.61, no.1, pp.66-74, March 2015.</p>
 		<p>&bull; <b>Sicong Liu</b>, Fang Yang, Jian Song, "<a target="blank" href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=6937195&amp;newsearch=true&amp;queryText=An%20Optimal%20Interleaving%20Scheme%20with%20Maximum%20Time-Frequency%20Diversity%20for%20PLC%20Systems">An Optimal Interleaving Scheme with Maximum Time-Frequency Diversity for PLC Systems</a>,” <i>IEEE Transactions on Power Delivery</i>, vol. 31, no. 3, pp. 1007-1014, June 2016.</p>
 		<p>&bull; <b>Sicong Liu</b>, Fang Yang,  Wenbo Ding, Jian Song, and Andrea M. Tonello, "<a target="blank" href="http://ieeexplore.ieee.org/document/7931965/">Structured Compressed Sensing Based Narrowband Interference Elimination for In-Home Power Line Communications</a>," <i>IEEE Transactions on Consumer Electronics</i>, vol. 63, no. 1, pp. 10-18, Feb. 2017.</p>
 		<p>&bull; <b>Sicong Liu</b>, Fang Yang, Chao Zhang, Jian Song, "<a target="blank" href="http://search.ieice.org/bin/summary.php?id=e98-a_3_870&amp;year=2015">Narrowband interference mitigation based on compressive sensing for OFDM systems</a>”, <i>IEICE Transactions on Fundamentals</i>, vol. E98-A, no. 3, pp. 870–873, March 2015.</p>
@@ -106,8 +110,8 @@
 
 <br>
 <p><strong>Conferences</strong></p>
-<p>&bull; H. Zhang, M. Min, L. Xiao, <b>S. Liu</b>#, P. Cheng and M. Peng, "<a target="blank" href="https://ieeexplore.ieee.org/document/8648136">Reinforcement Learning-Based Interference Control for Ultra-Dense Small Cells</a>,” <i>2018 IEEE Global Communications Conference (GLOBECOM)</i>, Abu Dhabi, United Arab Emirates, 2018, pp. 1-6.</p>
-<p>&bull; Z. Xiao, B. Gao, <b>S. Liu</b># and L. Xiao, "<a target="blank" href="https://ieeexplore.ieee.org/document/8647173">Learning Based Power Control for mmWave Massive MIMO against Jamming</a>,” <i>2018 IEEE Global Communications Conference (GLOBECOM)</i>, Abu Dhabi, United Arab Emirates, 2018, pp. 1-6.</p>
+<p>&bull; H. Zhang, M. Min, L. Xiao, <b>S. Liu</b>*, P. Cheng and M. Peng, "<a target="blank" href="https://ieeexplore.ieee.org/document/8648136">Reinforcement Learning-Based Interference Control for Ultra-Dense Small Cells</a>,” <i>2018 IEEE Global Communications Conference (GLOBECOM)</i>, Abu Dhabi, United Arab Emirates, 2018, pp. 1-6.</p>
+<p>&bull; Z. Xiao, B. Gao, <b>S. Liu</b>* and L. Xiao, "<a target="blank" href="https://ieeexplore.ieee.org/document/8647173">Learning Based Power Control for mmWave Massive MIMO against Jamming</a>,” <i>2018 IEEE Global Communications Conference (GLOBECOM)</i>, Abu Dhabi, United Arab Emirates, 2018, pp. 1-6.</p>
 <p>&bull; <b>Sicong Liu</b>, Fang Yang, Wenbo Ding, Jian Song, Zhu Han, "Impulsive Noise Cancellation for MIMO-OFDM PLC Systems: a Structured Compressed Sensing Perspective", to appear in <i>Proc. IEEE Global Communications Conference (Globecom)</i>, Dec. 2016.</p>
 <p>&bull; <b>Sicong Liu</b>, Fang Yang, Wenbo Ding, Jian Song, "NBI Cancellation for Smart Grid Communications: A Block Sparse Bayesian Learning Perspective", in <i>Proc. 2016 IEEE International Conference on Communications (ICC)</i>, Kuala Lumpur, May 2016, pp. 1-6.</p>
 <p>&bull; <b>Sicong Liu</b>, Fang Yang, Wenbo Ding, Jian Song, "<a target="blank" href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=7247536&amp;newsearch=true&amp;queryText=Structured%20compressive%20sensing%20based%20narrowband%20interference%20mitigation%20for%20vehicular%20communications">Structured compressive sensing based narrowband interference mitigation for vehicular communications</a>,” <i>Proc. IEEE International Conference on Communications (ICC’15)</i>, pp. 2375-2380, Jun. 2015.</p>
@@ -128,6 +132,13 @@
 <p>&bull; Fang Yang, Junnan Gao, <b>Sicong Liu</b>, and Jian Song, "Clipping noise cancellation based on compressed sensing for visible light communication", in <i>Proc. 3rd Workshop on Visible Light Communication Systems (VLCS'16)</i>, New York, USA, 2016, pp. 1-6.</p>
 
 			<!--<p>&bull; 刘思聪，杨昉，宋健，李建岐，刘伟麟；基于压缩感知的窄带干扰重构与消除；电视技术，2014(19), pp.128-130.</p>-->
+
+<p><strong>Book Chapters</strong></p>
+	<p>&bull; <b>S. Liu</b>, F. Yang, J. Song, "Non-Gaussian Noise and Interference Mitigation and Cancelation:From Classical Signal Processing to Compressed Sensing Methods," <i>Beijing: Publishing House of Electronics Industry</i>, May 2019, ISBN: 978-7-121-36455-6.</p>
+					<div class="captioned_image">
+						<img src="images/book_phei.jpg" width = 120 alt="Figure 2" />
+						
+					</div>
 
 <h3>Honors and Awards</h3>
 <p>&bull; Outstanding Doctoral Dissertation Award of Tsinghua University, 2017 </p>
@@ -167,7 +178,7 @@
 <br>
 <h3></h3>
 	<div class="footer">
-		Last updatd Aug. 2019 | copyright &copy; <b>Sicong Liu</b>.
+		Last updatd Jan. 2020 | copyright &copy; <b>Sicong Liu</b>.
 	</div>
 </div>
 
