--- a/sicongliu.html
+++ b/sicongliu.html
@@ -139,7 +139,8 @@
 						<img src="images/book_phei.jpg" width = 120 alt="Figure 2" />
 						
 					</div>
-<br>
+<div class = "divider">
+</div>
 
 <h3>Honors and Awards</h3>
 <p>&bull; Outstanding Doctoral Dissertation Award of Tsinghua University, 2017 </p>
