--- a/sicongliu.html
+++ b/sicongliu.html
@@ -135,13 +135,9 @@
 
 <p><strong>Book Chapters</strong></p>
 	<p>&bull; <b>S. Liu</b>, F. Yang, J. Song, "Non-Gaussian Noise and Interference Mitigation and Cancelation:From Classical Signal Processing to Compressed Sensing Methods," <i>Beijing: Publishing House of Electronics Industry</i>, May 2019, ISBN: 978-7-121-36455-6.</p>
-					<div class="captioned_image">
-						<img src="images/book_phei.jpg" width = 120 alt="Figure 2" />
-						
-					</div>
-<div class = "divider">
-</div>
-
+					<p>
+						<img src="images/book_phei.jpg" width = 120/>						
+					</p>
 <h3>Honors and Awards</h3>
 <p>&bull; Outstanding Doctoral Dissertation Award of Tsinghua University, 2017 </p>
 <p>&bull; Outstanding PhD Graduate Award of Tsinghua University, 2017 </p>
