--- a/sicongliu.html
+++ b/sicongliu.html
@@ -138,18 +138,26 @@
 					<p>
 						<img src="images/book_phei.jpg" width = 120/>						
 					</p>
+
+<h3>Research Grants</h3>
+<p>&bull; "Research on sparse interference cancelation methods for ultra-reliable vehicular communications," National Natural Science Foundation of China Youth Fund (No.61901403), 2020.01-2022.12 (PI). </p>
+<p>&bull; "Study on compressed sensing and sparse learning technologies for next-generation wireless communications," Natural Science Foundation of Fujian Province of China (No.2019J05001), 2019.07-2022.06 (PI). </p>
+<p>&bull; "Study on key technologies of 5G wireless communications based on compressed sensing and machine learning," Fundamental Research Funds for the Central Universities of China (No.20720190029), 2019.01-2019.12 (PI). </p>
+
+
 <h3>Honors and Awards</h3>
+<p>&bull; Second Prize in the Natural Science Award of Chinese Institute of Electronics (ranking 3), 2019 </p>
 <p>&bull; Outstanding Doctoral Dissertation Award of Tsinghua University, 2017 </p>
 <p>&bull; Outstanding PhD Graduate Award of Tsinghua University, 2017 </p>
 <p>&bull; Outstanding Graduate Award of Beijing City, 2017 </p>
-<p>&bull; "Academic Rising-Star" in Department of EE, Tsinghua University, 2016 </p>
+<p>&bull; Outstanding Academic Youth Award, Department of EE, Tsinghua University, 2016 </p>
 <p>&bull; National Graduate Scholarship, 2016</p>
 <p>&bull; The Tsinghua Excellent Graduate Students Support Project and Tang-Lixin Scholarship, 2015</p>
 <p>&bull; National Graduate Scholarship, 2014</p>
 <p>&bull; Excellent Undergraduate Award in Tsinghua, 2012</p>
 <p>&bull; Excellent Visiting Fellowship in City University of Hong Kong</p>
 <p>&bull; The Excellent Student Scholarship in THU (Twice)</p>
-<p>&bull; 1st Prize of the Beijing Undergraduate Physics Olympic Competition</p>
+<p>&bull; First Prize of the Beijing Undergraduate Physics Olympic Competition</p>
 <!--<p>&bull; National Undergraduate Endeavour Scholarship</p>-->
 <!--<p>&bull; Tsinghua Second-Class Scholarship for Freshmen</p>-->
 
