--- a/sicongliu.html
+++ b/sicongliu.html
@@ -185,8 +185,8 @@
 <h3></h3>
 	<div class="footer">
 	  <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-	  <span id="busuanzi_container_site_pv" >| Total views <span id="busuanzi_value_site_pv"></span>  </span>
-		<span id="busuanzi_container_site_uv" >| Total visit users <span id="busuanzi_value_site_uv"></span> </span>
+	  <span id="busuanzi_container_site_pv" >| tvs <span id="busuanzi_value_site_pv"></span>  </span>
+		<span id="busuanzi_container_site_uv" >| tus <span id="busuanzi_value_site_uv"></span> </span>
 		<br>
 
 		Last updatd Jan. 2020 | copyright &copy; <b>Sicong Liu</b>.
