--- a/sicongliu.html
+++ b/sicongliu.html
@@ -59,16 +59,16 @@
 			<div class="summary">Lorem ipsum dolor sit amet nullam dignissim</div>
 -->
 <h3></h3>
-<p><b>Sicong Liu</b> received his B.S.E. in electronic engineering from Tsinghua University, Beijing, China in 2012, and the PhD degree,  supervised by Prof. Jian Song (IEEE Fellow, ITU 6A Group Deputy Leader), in electronic engineering in Tsinghua University in 2017 with the highest honor. From 2010 to 2011, he was a visiting scholar in Dept. Electronic and Communications Engineering, City University of Hong Kong. He served as a senior research engineer in Research Dept. Network Technologies, Huawei Technologies Co. Ltd, from 2017 to 2018. Currently, he is an assistant professor in School of Informatics, Xiamen University.</p>
+<p><b>Sicong Liu</b> received his B.S.E. in electronic engineering from Tsinghua University, Beijing, China in 2012, and the PhD degree,  supervised by Prof. Jian Song (IEEE Fellow, ITU 6A Group Deputy Leader), in electronic engineering in Tsinghua University in 2017 with the highest honor. From 2010 to 2011, he was a visiting student in Dept. Electronic and Communications Engineering, City University of Hong Kong in 2010.  Currently, he is an assistant professor in School of Informatics, Xiamen University.</p>
 			   
 <p>Sicong Liu has published over 40 journal and conference research papers. He owns 8 Chinese invention patents. He is one of the core members that draft the Broadband Power Line Communications Standard in China. He has won the National Graduate Fellowship Award twice in 2014 and 2016, the Outstanding Doctoral Dissertation Award of Tsinghua University, the Outstanding PhD Graduate Award of Tsinghua University, and the Outstanding Graduate Award of Beijing City. He is a reviewer of IEEE Transactions on Signal Processing, IEEE Transactions on Communications, IEEE Transactions on Smart Grid, IEEE Transactions on Vehicular Technology, IEEE Transactions on Cybernetics, and IEEE Transactions on Wireless Communications. He is on the Editorial Board of the Future Internet Journal SI on Massive MIMO. He served as a the Technical Program Committee member/publication chair in many international academic conferences, including IEEE ICC, IEEE Globecom, IEEE SmartGridComm, ITNAC, DICC. He is a member of IEEE.</p>
-<p>His research interests mainly lie in sparse signal processing, interference suppression, wireless communications, physical-layer and network security, massive MIMO, power line and visible light communications, machine learning, and emerging 5G technologies.</p>
+<p>His current research interests  lie in sparse signal processing, interference suppression, communication security, wireless communications, visible light communications, and machine learning.</p>
 
 			<h3>Education and Research Experiences</h3>
 			<p><b>Mar. 2018 - Present</b> &nbsp;&nbsp; Assistant Professor, School of Informatics, Xiamen University</p>
-			<p><b>Jul.2017-Jan. 2018</b> &nbsp;&nbsp; Senior Research Engineer, Research Dept. Network Technologies, Huawei Technologies Co. Ltd</p>
+			<!--<p><b>Jul.2017-Jan. 2018</b> &nbsp;&nbsp; Senior Research Engineer, Research Dept. Network Technologies, Huawei Technologies Co. Ltd</p>-->
 			<p><b>Aug.2012-Jul.2017</b> &nbsp;&nbsp;Ph.D., Department of Electronic Engineering, Tsinghua University, supervised by Prof. Jian Song</p>
-			<p><b>Aug.2010-Jan.2011</b> &nbsp;Visiting Scholar, College of Science and Engineering, City University of Hong Kong, Hong Kong</p>
+			<p><b>Aug.2010-Jan.2011</b>  Visiting Student, College of Science and Engineering, City University of Hong Kong, Hong Kong</p>
 			<p><b>Aug.2008-Jul.2012</b> &nbsp;Bachelor, Department of Electronic Engineering, Tsinghua University</p>
 
 
@@ -110,6 +110,7 @@
 
 <br>
 <p><strong>Conferences</strong></p>
+<p>&bull; Y. Ding, D. Jiang, J. Huang, L. Xiao, <b>S. Liu</b>*, Y. Tang, H. Dai, "<a target="blank" href="https://ieeexplore.ieee.org/document/9014064">QoE-Aware Power Control for UAV-Aided Media Transmission with Reinforcement Learning</a>,” <i>2019 IEEE Global Communications Conference (GLOBECOM)</i>, Waikoloa, HI, USA, 2019, pp. 1-6.</p>
 <p>&bull; H. Zhang, M. Min, L. Xiao, <b>S. Liu</b>*, P. Cheng and M. Peng, "<a target="blank" href="https://ieeexplore.ieee.org/document/8648136">Reinforcement Learning-Based Interference Control for Ultra-Dense Small Cells</a>,” <i>2018 IEEE Global Communications Conference (GLOBECOM)</i>, Abu Dhabi, United Arab Emirates, 2018, pp. 1-6.</p>
 <p>&bull; Z. Xiao, B. Gao, <b>S. Liu</b>* and L. Xiao, "<a target="blank" href="https://ieeexplore.ieee.org/document/8647173">Learning Based Power Control for mmWave Massive MIMO against Jamming</a>,” <i>2018 IEEE Global Communications Conference (GLOBECOM)</i>, Abu Dhabi, United Arab Emirates, 2018, pp. 1-6.</p>
 <p>&bull; <b>Sicong Liu</b>, Fang Yang, Wenbo Ding, Jian Song, Zhu Han, "Impulsive Noise Cancellation for MIMO-OFDM PLC Systems: a Structured Compressed Sensing Perspective", to appear in <i>Proc. IEEE Global Communications Conference (Globecom)</i>, Dec. 2016.</p>
@@ -151,13 +152,13 @@
 <p>&bull; Outstanding PhD Graduate Award of Tsinghua University, 2017 </p>
 <p>&bull; Outstanding Graduate Award of Beijing City, 2017 </p>
 <p>&bull; Outstanding Academic Youth Award, Department of EE, Tsinghua University, 2016 </p>
-<p>&bull; National Graduate Scholarship, 2016</p>
+<p>&bull; National Scholarship for PhD Graduates, 2016</p>
 <p>&bull; The Tsinghua Excellent Graduate Students Support Project and Tang-Lixin Scholarship, 2015</p>
-<p>&bull; National Graduate Scholarship, 2014</p>
+<p>&bull; National Scholarship for Master Graduates, 2014</p>
 <p>&bull; Excellent Undergraduate Award in Tsinghua, 2012</p>
-<p>&bull; Excellent Visiting Fellowship in City University of Hong Kong</p>
+<!-- <p>&bull; Excellent Visiting Fellowship in City University of Hong Kong</p>
 <p>&bull; The Excellent Student Scholarship in THU (Twice)</p>
-<p>&bull; First Prize of the Beijing Undergraduate Physics Olympic Competition</p>
+<p>&bull; First Prize of the Beijing Undergraduate Physics Olympic Competition</p> -->
 <!--<p>&bull; National Undergraduate Endeavour Scholarship</p>-->
 <!--<p>&bull; Tsinghua Second-Class Scholarship for Freshmen</p>-->
 
@@ -189,7 +190,7 @@
 		<span id="busuanzi_container_site_uv" >| tus <span id="busuanzi_value_site_uv"></span> </span>
 		<br>
 
-		Last updatd Jan. 2020 | copyright &copy; <b>Sicong Liu</b>.
+		Last updatd May 2020 | copyright &copy; <b>Sicong Liu</b>.
 	</div>
 </div>
 
