--- a/sicongliu.html
+++ b/sicongliu.html
@@ -65,7 +65,7 @@
 	He has contributed to the drafting of the Broadband Power Line Communications Standard in China.
 	He has won Second Prize in the Natural Science Award of Chinese Institute of Electronics (ranking 3) and the Outstanding Doctoral Dissertation Award of Tsinghua University.
 	He served as a the publication chair in IEEE SmartGridComm 2019, and TPC member in many international academic conferences including IEEE ICC/Globecom, etc.  He has served as a Guest Editor for the Future Internet Journal. He is a member of IEEE.</p>
-<p>His current research interests  lie in sparse signal processing, interference suppression, communication security, wireless communications, visible light communications, and machine learning.</p>
+<p>His current research interests  lie in sparse signal processing, interference suppression, communication security, wireless communications, visible light communications, underwater acoustic communications, and machine learning.</p>
 
 			<h3>Education and Research Experiences</h3>
 			<p><b>Mar. 2018 - Present</b> &nbsp;&nbsp; Assistant Professor, School of Informatics, Xiamen University</p>
